--- a/EvaluationPlatform-Portal/src/main/webapp/style/basic_layout.css
+++ b/EvaluationPlatform-Portal/src/main/webapp/style/basic_layout.css
@@ -10,7 +10,7 @@
 	width: 100%;
 	height: 58px;
 	line-height: 70px;
-	color: #8A8A8A;
+	color: #000000;
 	font-size: 14px;
 	border-bottom: 1px solid #EDEDED;
 }
